--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -64,13 +64,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/header"
-        android:maxWidth="600dp"
+        android:maxWidth="500dp"
         android:padding="20dp"
         android:background="@color/white">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layout_email"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -89,7 +89,7 @@
 
         <Button
             android:id="@+id/btn_get_password"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/layout_email"
