--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
-    android:gravity="center_horizontal">
+    android:background="@color/white">
 
     <LinearLayout
         android:id="@+id/header"
@@ -125,4 +124,4 @@
         android:layout_weight="1"
         android:background="@color/white"/>
 
-</LinearLayout>
+</RelativeLayout>
