--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="red">#FF0000</color>
     <color name="gray">#EAEAEA</color>
     <color name="gray2">#C5C5C5</color>
+    <color name="violet">#9366FF</color>
 </resources>
